# futhark-language-server

./: .gitignore  CHANGELOG.md  README.md  cabal.project  futhark-language-server.cabal  merge.sh
app/: Main.hs
src/: Compile.hs  Diagnostic.hs  Handlers.hs  SemanticTokens.hs  Tool.hs  Utils.hs
