cabal-version:      2.4
name:               futhark-language-server
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Haoran Sun
maintainer:         haoranpb@outlook.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

-- library
    -- exposed-modules:

    -- Modules included in this library but not exported.
--     other-modules:
--             Futhark.LSP.Handlers
--             Futhark.LSP.Utils

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
--     build-depends:    

--     hs-source-dirs:   src
--     default-language: Haskell2010

executable futhark-language-server
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
            Handlers
            Utils

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    build-depends:
        base ^>=4.14.3.0,
        lsp ^>=1.4,
        futhark ^>=0.21.5,
        text,
        lens,
        hslogger

    hs-source-dirs:
            app,
            src
    default-language: Haskell2010
